# Ocesion

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
garbage/: CMakeLists1.txt  CMakeLists2.txt  CMakeLists3.txt
garbage/WindowManager/: PrimaryWindow.h  WindowManager.cpp  WindowManager.h
include/GLAD/: gl.h
lib/: glew.lib  glfw3.lib
src/: gl.c  main.cpp
src/Shaders/: normal.frag  normal.vert
src/WindowManager/: GraphicalContext.h  PrimaryWindow.cpp  Shader.cpp  Shader.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
src/WindowManager/VAO/: VAO.h  VertexManager.cpp  VertexManager.h  VertexSignature.h
